# Project-Datapunk

./: .cursorrules  .env.example  .gitignore  CouchDB-API-1.3-Database  CouchDB-API-1.3-Database.txt  DatapunkLaunch.docx  DatapunkPitch.txt  README.md  REPOSITORY_STRUCTURE.md  datapunk_env_site_packages_structure.txt  directory_tree_20241027_194801.txt  docker-compose.yml  files_status.json  googleData.md  mesh_restructure.md  project_status.md  project_structure.txt  proto-tree.py  repo_structure_generator.py  test1l.yaml  test2.yaml  tree.py
datapunk/containers/cortex/: .dockerignore  Dockerfile  pyproject.toml
datapunk/containers/cortex/src/config/: cortex_config.yaml
datapunk/containers/cortex/src/cortex-api/: main.py
datapunk/containers/cortex/tests/: conftest.py
datapunk/containers/cortex/tests/nlp/: test_pipeline.py
datapunk/containers/forge/: Dockerfile  pyproject.toml
datapunk/containers/lake/: .dockerignore  Dockerfile  pyproject.toml
datapunk/containers/lake/config/: init.sql  postgresql.conf
datapunk/containers/lake/init/: 00-init-extensions.sql
datapunk/containers/lake/scripts/: debug-build.ps1  debug-docker.ps1  debug-postgres.ps1  healthcheck.sh
datapunk/containers/lake/src/: main.py
datapunk/containers/lake/src/config/: config_manager.py  storage_config.py
datapunk/containers/lake/src/handlers/: config_handler.py  federation_handler.py  ingestion_handler.py  metadata_handler.py  nexus_handler.py  partition_handler.py  processing_handler.py  query_handler.py  storage_handler.py  stream_handler.py
datapunk/containers/lake/src/ingestion/: core.py  format_handlers.py  handlers.py  monitoring.py  source_handlers.py
datapunk/containers/lake/src/mesh/: __init__.py  mesh_integrator.py
datapunk/containers/lake/src/metadata/: analyzer.py  cache.py  core.py  store.py
datapunk/containers/lake/src/processing/: validator.py
datapunk/containers/lake/src/services/: __init__.py  lake_service.py  service_manager.py
datapunk/containers/lake/src/storage/: cache.py  cache_strategies.py  geometry.py  ml_strategies.py  quorum.py  stores.py
datapunk/containers/lake/tests/: conftest.py  requirements-test.txt  test_adaptive.py  test_advanced.py  test_advanced_adapters.py  test_backup.py  test_cache.py  test_compression.py  test_consensus.py  test_diagnostics.py  test_distributed.py  test_executor.py  test_executor_advanced.py  test_exporter.py  test_federation.py  test_federation_alerting.py  test_federation_extended.py  test_federation_manager.py  test_federation_monitoring.py  test_federation_profiling.py  test_federation_visualization.py  test_format_handlers.py  test_gist.py  test_hybrid.py  test_incremental.py  test_index_advanced.py  test_index_maintenance.py  test_index_manager.py  test_indexes.py  test_ingestion.py  test_mesh_integration.py  test_metadata.py  test_metadata_advanced.py  test_migration.py  test_monitor.py  test_monitoring.py  test_optimizer.py  test_optimizer_executor_bridge.py  test_parser_advanced.py  test_parser_extensions.py  (+16 more)
datapunk/containers/nexus/: Dockerfile  pyproject.toml
datapunk/containers/nexus/scripts/: healthcheck.sh
datapunk/containers/nexus/src/: gateway.py  main.py  service.py
datapunk/containers/nexus/src/api/: health.py
datapunk/containers/nexus/src/auth/: __init__.py  audit_logger.py  nexus_access_control.py  nexus_auth_manager.py  oauth2_manager.py  password_manager.py  rate_limiter.py  security_analyzer.py
datapunk/containers/nexus/src/routes/: __init__.py  upload.py
datapunk/containers/stream/: .dockerignore  Dockerfile  pyproject.toml
datapunk/containers/stream/scripts/: healthcheck.sh
datapunk/containers/stream/src/: main.py  service.py
datapunk/containers/stream/src/services/: __init__.py  stream_service.py
datapunk/containers/stream/tests/: test_websocket.py
datapunk/lib/shared/: config.py  health.py  pyproject.toml
datapunk/lib/shared/datapunk_shared/: __init__.py  cache.py  config.py  database.py  exceptions.py  health.py  logging.py  messaging.py  metrics.py  service.py  tracing.py
datapunk/lib/shared/datapunk_shared/auth/: __init__.py  access_control.py  api_key_manager.py  api_keys.py  approval_delegation.py  audit_compliance.py  audit_reports.py  audit_retention.py  key_policies.py  key_rotation.py  middleware.py  notification_channels.py  policy_approval.py  policy_enforcement.py  policy_migration.py  policy_rollback.py  policy_rollback_validator.py  policy_validator.py  role_manager.py  routes.py  types.py
datapunk/lib/shared/datapunk_shared/benchmarks/: __init__.py  reporter.py
datapunk/lib/shared/datapunk_shared/cache/: __init__.py  cache_features.py  cache_manager.py  cache_types.py  cluster_manager.py  cluster_rebalancer.py  invalidation_manager.py  manager.py
datapunk/lib/shared/datapunk_shared/config/: __init__.py  encryption.py  hot_reload.py  loader.py  schemas.py  version_manager.py
datapunk/lib/shared/datapunk_shared/database/: __init__.py  migrations.py  pool.py
datapunk/lib/shared/datapunk_shared/error/: decorators.py  error_handler.py  error_types.py  handlers.py  recovery_strategies.py
datapunk/lib/shared/datapunk_shared/loadtest/: framework.py  monitor.py  runner.py  tests.py
datapunk/lib/shared/datapunk_shared/mesh/: __init__.py  circuit_breaker.py  circuit_breaker_advanced.py  circuit_breaker_manager.py  circuit_breaker_metrics.py  circuit_breaker_strategies.py  config.py  config_validator.py  discovery.py  discovery_metrics.py  dns_discovery.py  health_aggregator.py  health_aware_balancer.py  health_aware_strategies.py  health_check.py  health_check_extended.py  health_checks.py  integrator.py  load_balancer.py  load_balancer_advanced.py  mesh.py  (+4 more)
datapunk/lib/shared/tests/: conftest.py  test_cache.py  test_cache_base.py  test_config_base.py  test_database.py  test_database_base.py  test_exceptions_base.py  test_health.py  test_health_base.py  test_logging.py  test_logging_base.py  test_messaging.py  test_metrics.py  test_metrics_base.py  test_service.py  test_service_base.py  test_setup.py  test_tracing.py  test_tracing_base.py
(+1683 files in other folders)
