[tool.poetry]
name = "datapunk-cortex"
version = "0.1.0"
description = "Cortex service for ML operations in Datapunk"
authors = ["Your Name <your.email@example.com>"]

[tool.poetry.dependencies]
python = "^3.11"
datapunk-shared = { path = "../../lib/shared" }
fastapi = "^0.104.1"
uvicorn = "^0.24.0"
numpy = "^1.26.2"
scipy = "^1.11.4"
scikit-learn = "^1.3.2"
torch = "^2.1.1"
transformers = "^4.35.2"
sentence-transformers = "^2.2.2"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.3"
pytest-asyncio = "^0.21.1"
black = "^23.11.0"
mypy = "^1.7.1"
pylint = "^3.0.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
