[tool.poetry]
name = "datapunk-forge"
version = "0.1.0"
description = "Forge service for data transformation in Datapunk"
authors = ["Your Name <your.email@example.com>"]

[tool.poetry.dependencies]
python = "^3.11"
datapunk-shared = { path = "../../lib/shared" }
fastapi = "^0.104.1"
uvicorn = "^0.24.0"
pandas = "^2.1.3"
numpy = "^1.26.2"
polars = "^0.19.12"
pyarrow = "^14.0.1"
dask = {extras = ["complete"], version = "^2023.11.0"}

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.3"
pytest-asyncio = "^0.21.1"
black = "^23.11.0"
mypy = "^1.7.1"
pylint = "^3.0.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api" 