[tool.poetry]
name = "datapunk-nexus"
version = "0.1.0"
description = "Nexus gateway for Datapunk"
authors = ["Your Name <your.email@example.com>"]

[tool.poetry.dependencies]
python = "^3.11"
datapunk-shared = { path = "../../lib/shared" }
fastapi = "^0.104.1"
uvicorn = "^0.24.0"
aiohttp = "^3.9.1"
redis = "^5.0.1"
limits = "^3.6.0"
python-jose = {extras = ["cryptography"], version = "^3.3.0"}
passlib = {extras = ["bcrypt"], version = "^1.7.4"}
python-multipart = "^0.0.6"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.3"
pytest-asyncio = "^0.21.1"
black = "^23.11.0"
mypy = "^1.7.1"
pylint = "^3.0.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api" 