[tool.poetry]
name = "datapunk-shared"
version = "0.1.0"
description = "Shared libraries for Datapunk services"
authors = ["Your Name <your.email@example.com>"]

[tool.poetry.dependencies]
python = "^3.11"
asyncpg = "^0.28.0"
redis = "^5.0.1"
aiohttp = "^3.9.1"
prometheus-client = "^0.19.0"
pydantic = "^2.5.2"
pydantic-settings = "^2.1.0"
python-consul2 = "^0.1.5"
structlog = "^23.2.0"
tenacity = "^8.2.3"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.3"
pytest-asyncio = "^0.21.1"
pytest-cov = "^4.1.0"
black = "^23.11.0"
mypy = "^1.7.1"
isort = "^5.12.0"
pylint = "^3.0.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api" 